--- a/app/src/main/res/layout/activity_merchant_transactions_list.xml
+++ b/app/src/main/res/layout/activity_merchant_transactions_list.xml
@@ -19,8 +19,10 @@
 
         <ImageView
             android:id="@+id/closeBtnIV"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_5sdp"
+            android:contentDescription="@string/close"
             android:src="@drawable/ic_close" />
 
         <TextView
