--- a/app/src/main/res/layout/fragment_business_account.xml
+++ b/app/src/main/res/layout/fragment_business_account.xml
@@ -68,13 +68,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/_9sdp"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:fontFamily="@font/opensans_semibold"
                 android:text="@string/dba_name"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_11ssp" />
 
             <ImageView
+                android:id="@+id/iv_notifications"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
