--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -121,7 +121,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:inputType="text|textNoSuggestions|textCapSentences"
-                        android:maxLength="255"
+                        android:maxLength="50"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -177,7 +177,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="text|textNoSuggestions"
+                        android:inputType="text|textNoSuggestions|textCapSentences"
                         android:maxLength="255"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
