--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -169,8 +169,6 @@
                             android:layout_marginBottom="@dimen/_7sdp"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text=""
-                            android:inputType="textPassword"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
 
@@ -1131,7 +1129,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_regular"
-                    android:text=" Terms of Service"
+                    android:text="@string/termsservice"
                     android:textColor="@color/primary_green"
                     android:textSize="@dimen/_11ssp" />
 
