--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -325,7 +325,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_10sdp"
-                        android:fontFamily="@font/opensans_semibold"
+                        android:fontFamily="@font/opensans_regular"
                         android:textColor="@color/error_red"
                         android:textSize="@dimen/_10ssp" />
                 </LinearLayout>
