--- a/app/src/main/res/layout/activity_website.xml
+++ b/app/src/main/res/layout/activity_website.xml
@@ -29,8 +29,7 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="Https://"
                 android:textColor="@color/light_gray"
-                android:textSize="@dimen/_12ssp"
-                />
+                android:textSize="@dimen/_12ssp" />
 
             <View
                 android:layout_width="1.5dp"
@@ -48,9 +47,9 @@
             android:fontFamily="@font/opensans_semibold"
             android:hint="Website"
             android:imeOptions="actionNext"
-            android:inputType="textEmailAddress"
-            android:maxLines="1"
+            android:inputType="text"
             android:maxLength="100"
+            android:maxLines="1"
             android:padding="14dp"
             android:singleLine="true"
             android:textColor="@color/primary_black"
