--- a/app/src/main/res/layout/activity_dbainfo_btm_sheet.xml
+++ b/app/src/main/res/layout/activity_dbainfo_btm_sheet.xml
@@ -36,7 +36,7 @@
             android:layout_marginBottom="@dimen/_26sdp"
             android:fontFamily="@font/opensans_semibold"
             android:lineHeight="@dimen/_26ssp"
-            android:text="Is your DBA information the same as your\ncompany information?"
+            android:text="Is your DBA information the same as your company information?"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
 
