Review application screen removed unused api calls

--- a/app/src/main/res/layout/activity_review_application_web_view.xml
+++ b/app/src/main/res/layout/activity_review_application_web_view.xml
@@ -34,7 +34,7 @@
         android:visibility="visible"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
     <RelativeLayout
         android:id="@+id/layoutLoader"
