--- a/app/src/main/res/layout/activity_pay_request_scan.xml
+++ b/app/src/main/res/layout/activity_pay_request_scan.xml
@@ -31,8 +31,9 @@
         android:id="@+id/closeBtnSC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_21sdp"
-        android:layout_marginTop="@dimen/_45sdp"
+        android:layout_marginStart="@dimen/_16sdp"
+        android:padding="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_40sdp"
         android:src="@drawable/ic_closewhite"
         android:visibility="visible" />
 
