--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -136,7 +136,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
@@ -373,18 +373,18 @@
                             android:background="@color/white"
                             android:orientation="vertical">
 
-                            <LinearLayout
+                            <RelativeLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/_10sdp"
-                                android:orientation="horizontal">
+                                android:layout_marginTop="@dimen/_10sdp">
 
                                 <TextView
-                                    android:layout_width="match_parent"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
                                     android:layout_marginStart="@dimen/_10sdp"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_weight="1"
+                                    android:layout_alignParentLeft="true"
+                                    android:layout_toStartOf="@+id/ll_processing_volume"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:text="@string/processing_volume"
                                     android:textColor="@color/primary_black"
@@ -392,11 +392,12 @@
 
                                 <LinearLayout
                                     android:id="@+id/ll_processing_volume"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_alignParentEnd="true"
                                     android:layout_marginEnd="@dimen/_13sdp"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_weight="1"
+                                    android:layout_centerVertical="true"
+                                    android:gravity="end"
                                     android:background="@drawable/corner_bg_grey"
                                     android:orientation="horizontal"
                                     android:padding="@dimen/_8sdp"
@@ -409,20 +410,21 @@
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
                                         android:fontFamily="@font/opensans_semibold"
-                                        android:text="Custom Date Range"
+                                        android:text="@string/custom_date_range"
                                         android:textColor="@color/primary_black"
                                         android:textSize="@dimen/_12sdp" />
 
                                     <ImageView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:layout_gravity="center"
+                                        android:layout_gravity="center_vertical"
                                         android:layout_marginStart="@dimen/_4sdp"
+                                        android:contentDescription="@string/arrow_right"
                                         android:src="@drawable/ic_chevron_down" />
 
                                 </LinearLayout>
 
-                            </LinearLayout>
+                            </RelativeLayout>
 
                             <View
                                 android:layout_width="match_parent"
@@ -492,7 +494,6 @@
                                     android:layout_weight="1"
                                     android:background="@drawable/bg_et_inactive"
                                     android:gravity="center"
-
                                     android:orientation="vertical">
 
                                     <TextView
@@ -500,7 +501,6 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="@dimen/_21sdp"
                                         android:fontFamily="@font/opensans_semibold"
-
                                         android:text="@string/transactions"
                                         android:textColor="@color/primary_black"
                                         android:textSize="@dimen/_11sdp" />
