--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -117,6 +117,7 @@
                         android:id="@+id/companynameET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="name"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
@@ -217,6 +218,7 @@
 
                 <com.greenbox.coyni.utils.outline_et.CompanyOutLineBoxPhoneNumberEditText
                     android:id="@+id/CompanyphoneNumberOET"
+                    android:importantForAutofill="no|auto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp" />
