--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -218,8 +218,8 @@
 
                 <com.greenbox.coyni.utils.outline_et.CompanyOutLineBoxPhoneNumberEditText
                     android:id="@+id/CompanyphoneNumberOET"
-                    android:importantForAutofill="no|auto"
                     android:layout_width="match_parent"
+                    android:digits="0123456789"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp" />
 
