--- a/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_gravity="center"
-            android:autofillHints="creditCardSecurityCode"
+            android:importantForAutofill="no"
             android:background="@android:color/transparent"
             android:digits="0123456789"
             android:fontFamily="@font/opensans_semibold"
