--- a/app/src/main/res/layout/preauthorization.xml
+++ b/app/src/main/res/layout/preauthorization.xml
@@ -27,7 +27,7 @@
                 <LinearLayout
                     android:id="@+id/layoutPClose"
                     android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_height="35dp"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginBottom="@dimen/_14sdp"
                     android:gravity="center_vertical"
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/_10sdp"
-                    android:src="@drawable/ic_preauth"></ImageView>
+                    android:src="@drawable/ic_preauth"/>
 
                 <TextView
                     android:id="@+id/tvMessage"
@@ -68,6 +68,7 @@
                     android:textSize="@dimen/_11ssp" />
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/etlAmuont"
                     style="@style/TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="64dp"
@@ -81,6 +82,7 @@
                         android:id="@+id/etAmount"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:autofillHints="creditCardSecurityCode"
                         android:fontFamily="@font/opensans_semibold"
                         android:gravity="center_vertical"
                         android:hint="0.00"
@@ -94,22 +96,35 @@
                         android:textColorHint="@color/light_gray"
                         android:textCursorDrawable="@drawable/cursor_color"
                         android:textIsSelectable="false"
-                        android:textSize="@dimen/_19ssp"
-                        android:autofillHints="creditCardSecurityCode"/>
+                        android:textSize="@dimen/_19ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/tvError"
+                <LinearLayout
+                    android:id="@+id/llError"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:text="Incorrect amount, 1 attempt left"
-                    android:textColor="@color/error_red"
-                    android:textSize="@dimen/_12ssp"
-                    android:visibility="gone"></TextView>
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/default_error_msg"
+                        android:src="@drawable/ic_erro" />
+
+                    <TextView
+                        android:id="@+id/tvError"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="Incorrect amount, 1 attempt left"
+                        android:textColor="@color/error_red"
+                        android:textSize="@dimen/_12ssp" />
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
 
